src/test/deca/context/invalid/created/operation_arith_divisions.deca
// Description :
// Test toutes les types d'opérations arithmétique de division
//
// Resultats :
// OK (Resultat dans synt)

{
    int a, b, c, d;
    float e, f, g, h;

    a = 5;
    b = 6;

    c = a / b;
    // (int, int) -> int

    d = 8;
    e = -5.4;

    f = d / e;
    // (int, float) -> float

    g = e / d;
    // (float, int) -> float

    h = f / g;
    // (float, float) -> float
}
